// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty props :image 1`] = `
<wx-view
  ariaHidden="true"
  class="t-empty__thumb"
>
  <t-image
    tClass="t-class-image"
  >
    <wx-view
      ariaHidden="{{false}}"
      class="t-class t-image t-image__mask t-image--loading t-image--shape-square"
      style=" "
    >
      <t-loading
        class="t-class-load"
        tClassText="t-image--loading-text"
      >
        <wx-view
          class="t-class"
          style=";width: 44rpx; height: 44rpx"
        >
          <wx-view
            class="t-loading t-loading--horizontal"
            style=""
          >
            <wx-view
              class="t-class-indicator t-loading__spinner t-loading__spinner--dots "
              style="width: 44rpx; height: 44rpx; color: inherit ; animation-duration: 0.8s; animation-play-state: running;"
            >
              <wx-view
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay:0s; animation-play-state: running;"
              />
              <wx-view
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay:0.26666666666666666s; animation-play-state: running;"
              />
              <wx-view
                class="t-loading__dot"
                style="animation-duration: 0.8s; animation-delay:0.5333333333333333s; animation-play-state: running;"
              />
            </wx-view>
            <wx-view
              class="t-loading__text t-loading__text--horizontal t-class-text"
            />
          </wx-view>
        </wx-view>
      </t-loading>
    </wx-view>
    <wx-image
      ariaHidden="{{true}}"
      ariaLabel=""
      class="t-class t-image t-image--shape-square"
      hidden="{{true}}"
      id="image"
      lazyLoad="{{false}}"
      mode="aspectFit"
      showMenuByLongpress="{{false}}"
      src="https://oteam-tdesign-1258344706.cos.ap-guangzhou.myqcloud.com/miniprogram/empty__demo-image.png"
      style=""
      webp="{{false}}"
      bind:error="onLoadError"
      bind:load="onLoaded"
    />
  </t-image>
</wx-view>
`;

exports[`empty props :image 2`] = `
<t-image
  id="t-image"
  t-class="t-class-image"
>
  <wx-view
    ariaHidden="{{false}}"
    class="t-class t-image t-image__mask t-image--loading t-image--shape-square"
    style=" "
  >
    <t-loading
      class="t-class-load"
      tClassText="t-image--loading-text"
    >
      <wx-view
        class="t-class"
        style=";width: 44rpx; height: 44rpx"
      >
        <wx-view
          class="t-loading t-loading--horizontal"
          style=""
        >
          <wx-view
            class="t-class-indicator t-loading__spinner t-loading__spinner--dots "
            style="width: 44rpx; height: 44rpx; color: inherit ; animation-duration: 0.8s; animation-play-state: running;"
          >
            <wx-view
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay:0s; animation-play-state: running;"
            />
            <wx-view
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay:0.26666666666666666s; animation-play-state: running;"
            />
            <wx-view
              class="t-loading__dot"
              style="animation-duration: 0.8s; animation-delay:0.5333333333333333s; animation-play-state: running;"
            />
          </wx-view>
          <wx-view
            class="t-loading__text t-loading__text--horizontal t-class-text"
          />
        </wx-view>
      </wx-view>
    </t-loading>
  </wx-view>
  <wx-image
    ariaHidden="{{true}}"
    ariaLabel=""
    class="t-class t-image t-image--shape-square"
    hidden="{{true}}"
    id="image"
    lazyLoad="{{false}}"
    mode="aspectFit"
    showMenuByLongpress="{{false}}"
    src="https://oteam-tdesign-1258344706.cos.ap-guangzhou.myqcloud.com/miniprogram/empty__demo-image.png"
    style=""
    webp="{{false}}"
    bind:error="onLoadError"
    bind:load="onLoaded"
  />
</t-image>
`;
